Name:          Win32-junction-point
Version:       0.0.1
Synopsis:      Support for manipulating NTFS junction points.
Description:
  This package provides the ability to manipulate NTFS junction points as
  supported by Windows 2000 and above. Junction points, along with NTFS hard
  links and NTFS symbolic links, are a type of symbolic link that can be made
  between folders existing on the same filesystem. Please read [Microsoft
  KB205524] for more information on junction points.
  .
  Junction points have always been left undocumented in the Win32 SDK. The
  Windows 2000 Resource Kit came with a command-line utility named linkd.exe
  to work with them. Later, Mark Russinovich of SysInternals distributed a
  replacement utility named [Junction] which accomplished the same thing.
  .
  This source code is based on an [article] and [C++ library] written by
  [Mike Nordell] at codeproject.com.
  .
  It is against Microsoft's recommendation to make use of undocumented API
  features. Use this library at your own risk.
  .
  [article] <http://www.codeproject.com/KB/winsdk/junctionpoints.aspx>
  [C++ library] <http://www.codeproject.com/script/Articles/ViewDownloads.aspx?aid=194>
  [Junction] <http://technet.microsoft.com/en-us/sysinternals/bb896768>
  [Microsoft KB205524] <http://support.microsoft.com/?kbid=205524>
  [Mike Nordell] <http://www.codeproject.com/Members/Mike-Nordell>
License:       BSD3
License-file:  LICENSE
Author:        Michael Steele, Mike Nordell
Maintainer:    mikesteele81@gmail.com
Copyright:     Michael Steele
Category:      System
Build-type:    Simple
-- Extra-source-files:
Cabal-version: >=1.2
Homepage:      http://github.com/mikesteele81/Win32-junction-point

Library
  Exposed-modules: System.Win32.JunctionPoint

  Build-depends: base  >= 4.0  && < 4.4
               , text  >= 0.11 && < 0.12
               , Win32 >= 2.2  && < 2.3

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:
  Ghc-Options: -funbox-strict-fields -Wall
